--- a/css/main.css
+++ b/css/main.css
@@ -279,6 +279,7 @@ footer {
     background-color:rgba(0, 0, 0, 0.4);
     box-shadow:0 1px 10px rgba(0, 0, 0, 0.4), 0 0 50px rgba(128, 128, 128, 0.1);
     border-color: transparent;
+    pointer-events:none;
 }
 
 @-webkit-keyframes ball-scale {
