--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,11 @@ header li {
     align-items: center;
 }
 
+.add-center {
+    justify-content: center;
+    align-items: center;
+}
+
 .crescent-moon {
     width: 30px;
     height: 30px;
@@ -211,12 +216,19 @@ footer {
 
 .dropdown:hover>.dropdown-menu {
     display: block;
+    font-size:1.5rem;
 }
 
 .section {
     width: 130.0rem;
     padding: 1.0rem;
     background-color: rgb(255, 255, 255);
+}
+
+.img-my-photo {
+    width: 30.0rem;
+    height: 30.0rem;
+    object-fit: cover; /* この一行を追加するだけ！ */
 }
 
 /*
@@ -345,4 +357,47 @@ footer {
 /* TODO 一旦ここだが変更する */
 .ball-scale {
     z-index: 2;
+}
+
+/* modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 99;
+    left: 0;
+    top: 0;
+    min-height: 100vh;
+    width: 100%;
+    /* overflow: auto; */
+    background-color: rgba(0,0,0,0.5);
+}
+
+.modal-content {
+    background-color: #f4f4f4;
+    /* margin: 20% auto; */
+    height: 70%;
+    width: 80%;
+    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2),0 7px 20px 0 rgba(0,0,0,0.17);
+    animation-name: modalopen;
+    animation-duration: .5s;
+}
+
+@keyframes modalopen {
+    from {opacity: 0}
+    to {opacity: 1}
+} 
+
+.modal-header {
+    background: lightblue;
+    padding: 0.3rem 1.5rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.modal-close {
+    font-size: 2rem;
+}
+
+.modalClose:hover {
+    cursor: pointer;
 }
