--- a/PortfolioSite/css/main.css
+++ b/PortfolioSite/css/main.css
@@ -382,6 +382,10 @@ footer {
     animation-duration: .5s;
 }
 
+.modal-body {
+    padding:1.0rem;
+}
+
 @keyframes modalopen {
     from {opacity: 0}
     to {opacity: 1}
@@ -400,4 +404,49 @@ footer {
 
 .modalClose:hover {
     cursor: pointer;
+}
+
+ul.timeline {
+    padding: 0;
+}
+
+.timeline > li {
+    overflow: hidden;
+    margin: 0;
+    position: relative;
+}
+.timeline p {
+    font-size: 1.5rem;
+    padding:0;
+}
+.timeline-date {
+    width: 11.0rem;
+    float: left;
+    margin-top: 2.0rem;
+}
+
+.timeline-content {
+    float: left;
+    border-left: 0.3rem solid #e5e5d1; 
+    padding-left: 3.0rem;
+}
+
+.timeline-content:before {
+    content: '';
+    width: 1.2rem;
+    height: 1.2rem;
+    background: #fff700;
+    position: absolute;
+    left: 10.6rem;
+    top: 2.4rem;
+    border-radius: 100%;
+    border:0.1rem solid #e5e5d1;
+}
+
+.profile-content {
+    padding-left:2.0rem;
+}
+
+.profile-section {
+    margin-bottom:1.0rem;
 }
