--- a/CharacterConversion/css/main.css
+++ b/CharacterConversion/css/main.css
@@ -15,6 +15,26 @@ html {
 	font-size:62.5%;
 }
 
+body {
+	margin: 0;
+	padding: 0;
+}
+
+.center{
+	display: grid;
+	place-content: center;
+}
+
+
+
+
+.chengeCombination{
+	/* width: 100%; */
+	height: 40.0rem;
+	background-color: #ffffff;
+	/* margin:1.0rem 0 0.5rem 0; */
+}
+
 button {
 	width:10.5rem;
 	height: 3.5rem;
@@ -42,9 +62,10 @@ form {
 	width:100%;
 }
 
-.center{
+section{
 	margin: 0 auto;
 	width: 95.0%;
+	
 }
 
 .sentence-area {
@@ -62,7 +83,6 @@ div{
 .result {
 	margin-top: 2.0rem;
 	height: 40.0rem;
-	border: 0.1rem solid;
 	overflow-y: scroll;
 	background-color:#ffffff;
 }
