--- a/CharacterConversion/css/main.css
+++ b/CharacterConversion/css/main.css
@@ -18,6 +18,7 @@ html {
 body {
 	margin: 0;
 	padding: 0;
+	font-size: 1.0rem;
 }
 
 .center{
@@ -25,14 +26,26 @@ body {
 	place-content: center;
 }
 
+.sentence{
+	font-size:1.5rem;
+}
 
-
-
-.chengeCombination{
-	/* width: 100%; */
-	height: 40.0rem;
+.summary{
+	/* height: 10.0rem; */
 	background-color: #ffffff;
-	/* margin:1.0rem 0 0.5rem 0; */
+	padding:1.0rem;
+	margin:0 0 2.0rem 0;
+}
+
+.changeCombination{
+	/* width: 100%; */
+	background-color: #ffffff;
+	padding:1.0rem;
+}
+
+h1{
+	font-size:2.0rem;
+	margin:0;
 }
 
 button {
@@ -44,6 +57,7 @@ button {
 
 .main {
 	margin-left: 0.1rem;
+	padding:0.5rem;
 	text-align: left;
 	background-color: #e6e6e6;
 	border:0.1rem solid #e6e6e6;
@@ -72,7 +86,7 @@ section{
 	width: 100%;
 	height: 400px;
 	text-align: left;
-	margin:1.0rem 0 0.5rem 0;
+	/* margin:0 0 0.5rem 0; */
 	font-size:1.6rem;
 }
 
@@ -81,7 +95,7 @@ div{
 }
 
 .result {
-	margin-top: 2.0rem;
+	margin-top: 0.5rem;
 	height: 40.0rem;
 	overflow-y: scroll;
 	background-color:#ffffff;
